Rename whitening function

--- a/..Rcheck/ndx/html/00Index.html
+++ b/..Rcheck/ndx/html/00Index.html
@@ -23,7 +23,7 @@
 <table style="width: 100%;">
 <tr><td style="width: 25%;"><a href="calculate_DES.html">calculate_DES</a></td>
 <td>Calculate Denoising Efficacy Score (DES)</td></tr>
-<tr><td style="width: 25%;"><a href="ndx_ar2_whitening.html">ndx_ar2_whitening</a></td>
+<tr><td style="width: 25%;"><a href="ndx_ar_whitening.html">ndx_ar_whitening</a></td>
 <td>AR(2) Pre-whitening for fMRI Data</td></tr>
 <tr><td style="width: 25%;"><a href="ndx_build_design_matrix.html">ndx_build_design_matrix</a></td>
 <td>Build a Full Design Matrix from Modular Components</td></tr>
